# email-sender-verifier

./: LICENSE  README.md  emailsender_api.py  setup.cfg  setup.py
APITest/: EmailSender_API.js  Sender_API.js  package-lock.json  package.json
Verifier/: __init__.py  email.py
