[metadata]
name = email-sender-verifier
version = 2.2.0
description = Email Verifier is a python library designed for sending One-Time-Passwords (OTP) and performing code verification via email.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christiangarcia0311/email-sender-verifier
author = Christian Garcia
author_email = iyaniyan03112003@gmail.com
license = MIT

[options]
packages = find:

